@startuml

title __NOTEADAPTERS's Class Diagram__\n

  namespace com.group.project {
    namespace noteAdapters {
      class com.group.project.noteAdapters.NotesAdapter {
          - context : Context
          - notes : ArrayList<Note>
          + NotesAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          + setListener()
          - getNote()
      }
    }
  }
  

  namespace com.group.project {
    namespace noteAdapters {
      class com.group.project.noteAdapters.NotesAdapter.NoteHolder {
          ~ noteDate : TextView
          ~ noteText : TextView
          - NoteHolder()
      }
    }
  }
  

  com.group.project.noteAdapters.NotesAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.group.project.noteAdapters.NotesAdapter o-- com.group.project.noteUtility.NoteEventListener : listener
  com.group.project.noteAdapters.NotesAdapter +-down- com.group.project.noteAdapters.NotesAdapter.NoteHolder
  com.group.project.noteAdapters.NotesAdapter.NoteHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
